# ntex-grpc

./: Cargo.toml  README.md
examples/custom/: Cargo.toml  generate.sh  helloworld.proto
examples/custom/src/: client.rs  helloworld.rs  unique_id.rs
examples/helloworld/: Cargo.toml  build.rs  generage.sh  helloworld.proto
examples/helloworld/src/: client.rs  helloworld.rs  server.rs
ntex-grpc/: CHANGES.md  Cargo.toml  generate.sh
ntex-grpc-codegen/: CHANGES.md  Cargo.toml  README.md  rustfmt.toml
ntex-grpc-codegen/src/: config.rs  generator.rs  lib.rs  main.rs
ntex-grpc-derive/: Cargo.toml
ntex-grpc-derive/src/: lib.rs
ntex-grpc/src/: client.rs  consts.rs  encoding.rs  error.rs  lib.rs  request.rs  server.rs  service.rs  status.rs  transport.rs  types.rs  utils.rs
ntex-grpc/src/client/: connector.rs  mod.rs  request.rs  transport.rs
ntex-grpc/src/google_types/: duration.rs  duration_impl.rs  mod.rs  timestamp.rs  timestamp_impl.rs  wrappers.rs
ntex-grpc/src/server/: error.rs  mod.rs  service.rs
ntex-grpc/tests/: counts.proto  counts.rs  integration.rs
prost-build/: Cargo.toml  build.rs
prost-build/src/: ast.rs  code_generator.rs  extern_paths.rs  ident.rs  lib.rs  path.rs
prost-derive/: Cargo.toml  README.md
prost-derive/src/: lib.rs  server.rs
prost-derive/src/field/: group.rs  map.rs  message.rs  mod.rs  oneof.rs  scalar.rs
