[workspace]
members = [
  "ntex-grpc",
  "ntex-grpc-codegen",
  "ntex-grpc-derive",
  "prost-build",
  "examples/custom",
  "examples/helloworld"
]

[patch.crates-io]
ntex-grpc = { path = "./ntex-grpc" }
ntex-grpc-codegen = { path = "./ntex-grpc-codegen" }
ntex-grpc-derive = { path = "./ntex-grpc-derive" }
ntex-prost-build = { path = "./prost-build" }

ntex = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-service = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-util = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-tls = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-io = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-connect = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-tokio = { git = "https://github.com/ntex-rs/ntex.git", branch = "ntex-0.7" }
ntex-h2 = { git = "https://github.com/ntex-rs/ntex-h2.git", branch = "0-3" }
