[workspace]
members = [
  "ntex-grpc",
  "ntex-grpc-codegen",
  "ntex-grpc-derive",
  "prost-build",
  "examples/custom",
  "examples/helloworld"
]

[patch.crates-io]
ntex-grpc = { path = "./ntex-grpc" }
ntex-grpc-codegen = { path = "./ntex-grpc-codegen" }
ntex-grpc-derive = { path = "./ntex-grpc-derive" }
ntex-prost-build = { path = "./prost-build" }

ntex-h2 = { git = "https://github.com/ntex-rs/ntex-h2.git" }
