[workspace]
members = [
  "ntex-grpc",
  "ntex-grpc-codegen",
  "ntex-grpc-derive",
  "prost-build",
  "examples/custom",
  "examples/helloworld"
]
resolver = "2"

[patch.crates-io]
ntex-grpc = { path = "./ntex-grpc" }
ntex-grpc-codegen = { path = "./ntex-grpc-codegen" }
ntex-grpc-derive = { path = "./ntex-grpc-derive" }
ntex-prost-build = { path = "./prost-build" }

ntex-net = { path = "../../ntex/ntex-net" }