[package]
name = "ntex-grpc-codegen"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "ntex-grpc"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
prost-build = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
log = "0.4"
env_logger = "0.9"
