[package]
name = "ntex-grpc-codegen"
version = "0.2.13"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "GRPC Client/Server framework (codegen)"
documentation = "https://docs.rs/ntex-grpc-codegen"
repository = "https://github.com/ntex-rs/ntex-grpc"
readme = "README.md"
keywords = ["grpc"]
categories = ["asynchronous", "network-programming"]
edition = "2021"

[[bin]]
name = "ntex-grpc"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
ntex-prost-build = "0.11.14"
log = "0.4"
env_logger = "0.11"
