[package]
name = "ntex-grpc-derive"
version = "0.7.0"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
repository = "https://github.com/ntex-rs/ntex-grpc"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.3", features = [ "full", "extra-traits", "fold" ] }
