[package]
name = "ntex-grpc"
version = "0.6.4"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "GRPC Client/Server framework"
documentation = "https://docs.rs/ntex-grpc"
repository = "https://github.com/ntex-rs/ntex-grpc"
readme = "README.md"
keywords = ["grpc"]
categories = ["asynchronous", "network-programming"]
edition = "2021"

[lib]
name = "ntex_grpc"
path = "src/lib.rs"

[dependencies]
ntex-h2 = "0.5"
ntex-http = "0.1"
ntex-io = "1.0"
ntex-util = "1.0"
ntex-bytes = "0.1"
ntex-service = "2.0"
ntex-grpc-derive = "0.6"

log = "0.4"
thiserror = "1.0"
pin-project-lite = "0.2"

[dev-dependencies]
openssl = "0.10"
ntex = { version = "1.2", features = ["openssl", "tokio"] }
env_logger = { version = "0.11", default-features = false }
