[package]
name = "ntex-grpc"
version = "0.7.4"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "GRPC Client/Server framework"
documentation = "https://docs.rs/ntex-grpc"
repository = "https://github.com/ntex-rs/ntex-grpc"
readme = "README.md"
keywords = ["grpc"]
categories = ["asynchronous", "network-programming"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ntex_grpc"
path = "src/lib.rs"

[dependencies]
ntex-h2 = "1.7"
ntex-http = "0.1"
ntex-io = "2"
ntex-util = "2"
ntex-bytes = "0.1"
ntex-service = "3"
ntex-grpc-derive = "0.7"

bitflags = "2"
log = "0.4"
thiserror = "1"
pin-project-lite = "0.2"

[dev-dependencies]
openssl = "0.10"
env_logger = "0.11"
ntex = { version = "2", features = ["openssl", "tokio"] }
