[package]
name = "ntex-prost-build"
version = "0.11.11"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/ntex-rs/ntex-grpc"
documentation = "https://docs.rs/ntex-prost-build"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2018"

[features]
default = []
vendored = []

[dependencies]
heck = "0.4"
itertools = "0.10"
log = "0.4"
multimap = { version = "0.8", default-features = false }
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
tempfile = "3"
once_cell = "1.9"
regex = { version = "1.5.5", default-features = false, features = ["std", "unicode-bool"] }

[build-dependencies]
which = { version = "4", default-features = false }
cfg-if = "1"
cmake = "0.1"

[dev-dependencies]
env_logger = { version = "0.10", default-features = false }
