[package]
name = "custom"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ntex = "2"
ntex-h2 = "1"
ntex-grpc = "0.7"

env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ntex = { version = "2", features = ["openssl", "tokio"] }
