[package]
name = "custom"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ntex = "3.0"
ntex-h2 = "3.6"
ntex-grpc = "1.0"

env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ntex = { version = "3.0", features = ["openssl", "tokio"] }
