[package]
name = "helloworld"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
ntex = "2"
ntex-grpc = "0.7"
ntex-h2 = "1"

clap = "2"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"

[dev-dependencies]
ntex = { version = "2", features = ["openssl", "tokio"] }
