[package]
name = "helloworld"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
ntex = { version = "3.0", features = ["tokio"] }
ntex-grpc = "1"
ntex-h2 = "3"

clap = "2"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"

[dev-dependencies]
ntex = { version = "3.0", features = ["openssl", "tokio"] }
